add blog button

--- a/index.html
+++ b/index.html
@@ -58,27 +58,7 @@
 
 <body class="body">	
 	<div class="top-block" style="margin-top:100px;>
-		<header id="header" class="header">
-			<div data-collapse="medium" data-animation="over-left" data-duration="400" data-doc-height="1" data-no-scroll="1" class="navigation w-nav">
-				<div data-ix="logo-box" class="logo-box" style="opacity: 1; width: auto; transition: opacity 1000ms;">
-					<!--a href="/" class="link-block-4 w-inline-block w--current">
-						<div class="logo">Аутмаркетинг</div><div data-ix="point" class="point" style="opacity: 1; transform: scaleX(1) scaleY(1) scaleZ(1); transition: opacity 200ms, transform 200ms;">*</div>
-					</a-->
-				</div>
-				<nav role="navigation" class="nav-box w-nav-menu">
-					<a data-ix="navbar" href="#usp-section" class="nav-link w-nav-link" style="transition: all 0.2s ease 0s, opacity 1000ms; opacity: 1;">Связаться с нами</a>
-					<a href="#candourse-section" data-ix="navbar" class="nav-link w-nav-link" style="transition: all 0.2s ease 0s, opacity 1000ms; opacity: 1;">Почитать блог</a>
-					<!--a href="#express-section" data-ix="navbar" class="nav-link w-nav-link" style="transition: all 0.2s ease 0s, opacity 1000ms; opacity: 1;">Экспресс-маркетинг</a>
-					<a data-ix="open" class="nav-link but w-nav-link" style="transition: all 0.2s ease 0s;">Связаться</a-->
-				</nav>
-				<div class="menu-button w-nav-button">
-					<div class="menu-icon w-icon-nav-menu"></div>
-				</div>
-				<div class="w-nav-overlay" data-wf-ignore=""></div>
-			</div>
-		</header>
-
-		<div id="utp-screen" class="utp-screen">
+		<div class="utp-screen" id="utp-screen">
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;">
 					<h1 id="h1" data-ix="appear-1" class="h1 right" style="font-family: 'Montserrat', sans-serif; font-weight: 700;">Помогаем запустить и&nbsp;наладить HR-маркетинг</h1>
@@ -108,8 +88,11 @@
 			</div>
 			<div class="top-box">
 				<div class="top-wrapper" style="max-width: 90%;"> 
-					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “<b>эйчаркетинг</b>” – HRketing.<br/>Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
+					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “<b>эйчаркетинг</b>” – HRketing.<br/><br/>Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
 				</div>
+			</div>
+			<div class="chep">
+				<a href="https://medium.com/@hrm_agency/" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Детали — в блоге</a>
 			</div>							
 		</div>
 	</div>
@@ -160,7 +143,7 @@
 		<div class="chep">
 			<h1 data-ix="scroll-1" class="h3 spec">Что дальше?</h1>
 			<p data-ix="scroll-1" class="_25-effra" style="margin-top: 30px;">Сейчас самое время задать друг другу вопросы и&nbsp;запланировать встречу или созвон. Черновой план действий составим в течение недели.</p>
-			<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>		
+			<a href="https://telegram.me/adolgushev" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Напишите в Телеграм</a>	
 		</div>
 	</section>
 
