add styles for blog-button

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</div>
 			</div>
 			<div class="chep">
-				<a href="https://medium.com/@hrm_agency/" data-ix="button-scroll" target="_blank" class="telegram-button w-button">Детали — в блоге</a>
+				<a href="https://medium.com/@hrm_agency/" data-ix="button-scroll" target="_blank" class="blog-button w-button">Детали — в блоге</a>
 			</div>							
 		</div>
 	</div>
