fix blog-chep div

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<p data-ix="appear-2" class="simple-text">Для этой деятельности есть разные названия. Техно-маркетинг, техно-пиар, Developer Relations. Нам нравится вымышленное слово “<b>эйчаркетинг</b>” – HRketing.<br/><br/>Human Relations & Marketing. Или Human-Related Marketing. Про людей, взаимоотношения и маркетинг. В такой последовательности.</p> 
 				</div>
 			</div>
-			<div class="chep">
+			<div class="blog-chep">
 				<a href="https://medium.com/@hrm_agency/" data-ix="button-scroll" target="_blank" class="blog-button">Детали — в блоге</a>
 			</div>							
 		</div>
