--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>Долгушев и Сторожилов — агентство HR-маркетинга</title>
-	<meta content="Помогаем запустить и наладить HR-маркетинг. Поможем нанимать эффективнее и проще." name="description"/>
+	<meta content="Помогаем запустить и наладить HR-маркетинг. Придумаем, обвешаем метриками, сделаем руками и научим ваших сотрудников." name="description"/>
 	<meta content="summary" name="twitter:card"/>
 	<meta content="Долгушев и Сторожилов — агентство HR-маркетинга" property="og:title"/>
-	<meta content="Помогаем запустить и наладить HR-маркетинг. Поможем нанимать эффективнее и проще." property="og:description"/>
+	<meta content="Помогаем запустить и наладить HR-маркетинг. Придумаем, обвешаем метриками, сделаем руками и научим ваших сотрудников." property="og:description"/>
 	<meta content="https://hrmagency.ru/dist/opengraph.jpg" property="og:image"/>
 	<meta content="width=device-width, initial-scale=1" name="viewport"/>
 	<!-- мета и опенграф ↑ -->
