--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/aleksey.dolgushev" class="round-link w-inline-block"><img src="https://hrmagency.ru/dist/alyoshka.png" data-ix="scroll-1" srcset="https://hrmagency.ru/dist/alyoshka.png 500w, https://hrmagency.ru/dist/alyoshka.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Алексей Долгушев</h4>
-				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, организовывал CodeFest. Развивает локальные&nbsp;IT-сообщества в России.</p>
+				<p data-ix="scroll-1" class="bio-txt">Программировал машинное зрение, делал разный маркетинг, управлял проектами и продуктами, участвовал в организации CodeFest. Развивает локальные&nbsp;IT-сообщества в России.</p>
 			</div>
 			<div class="info-box">
 				<a target="_blank" href="https://www.facebook.com/mihail.storozhilov" class="round-link w-inline-block"><img src="https://hrmagency.ru/dist/mishanya.png" data-ix="scroll-1" srcset="https://hrmagency.ru/dist/mishanya.png 500w, https://hrmagency.ru/dist/mishanya.png 930w" sizes="(max-width: 479px) 80vw, (max-width: 767px) 70vw, (max-width: 991px) 320px, 410px"/></a>
 				<h4 data-ix="scroll-1" class="h3 _2">Михаил Сторожилов</h4>
-				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, 4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday, CodeFest, FrontFest и&nbsp;конференцию Груша. Говорит и показывает.</p>
+				<p data-ix="scroll-1" class="bio-txt">Был фронтендером, PM, 4 года занимался HR-маркетингом в 2ГИС. Организовывал Devday и FrontFest, участвовал в организации CodeFest и&nbsp;конференции Груша. Говорит и показывает.</p>
 			</div>
 		</div>
 	</div>
